# xmipp4-cuda

./: CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build-and-test.yml  deploy.yml
conda/: meta.yaml
include/xmipp4/cuda/: dynamic_shared_object.h
include/xmipp4/cuda/hardware/: cuda_buffer.hpp  cuda_device.hpp  cuda_device_queue.hpp  cuda_error.hpp  cuda_event.hpp  cuda_memory_allocator.hpp  cuda_memory_resource.hpp
src/: CMakeLists.txt  cuda_plugin.cpp  cuda_plugin.hpp  cuda_plugin_hook.cpp
src/hardware/: cuda_buffer.cpp  cuda_buffer_memcpy.cpp  cuda_copy_bytes.hpp  cuda_copy_bytes.inl  cuda_device.cpp  cuda_device_backend.cpp  cuda_device_backend.hpp  cuda_device_buffer.cpp  cuda_device_buffer.hpp  cuda_device_copy.cpp  cuda_device_memory_allocator.cpp  cuda_device_memory_allocator.hpp  cuda_device_memory_heap.cpp  cuda_device_memory_heap.hpp  cuda_device_memory_resource.cpp  cuda_device_memory_resource.hpp  cuda_device_queue.cpp  cuda_device_queue_pool.cpp  cuda_device_to_device_memory_transfer.cpp  cuda_device_to_device_memory_transfer.hpp  cuda_device_to_device_memory_transfer_backend.cpp  cuda_device_to_device_memory_transfer_backend.hpp  cuda_device_to_host_memory_transfer.cpp  cuda_device_to_host_memory_transfer.hpp  cuda_device_to_host_memory_transfer_backend.cpp  cuda_device_to_host_memory_transfer_backend.hpp  cuda_device_to_host_transfer.cpp  cuda_error.cpp  cuda_event.cpp  cuda_host_memory_allocator.cpp  cuda_host_pinned_memory_allocator.cpp  cuda_host_pinned_memory_allocator.hpp  cuda_host_pinned_memory_heap.cpp  cuda_host_pinned_memory_heap.hpp  cuda_host_pinned_memory_resource.cpp  cuda_host_pinned_memory_resource.hpp  cuda_host_to_device_memory_transfer.cpp  cuda_host_to_device_memory_transfer.hpp  cuda_host_to_device_memory_transfer_backend.cpp  cuda_host_to_device_memory_transfer_backend.hpp  (+21 more)
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/src/: test_load.cpp
tests/unitary/src/compute/allocator/: test_cuda_memory_block.cpp  test_cuda_memory_block_pool.cpp  test_cuda_memory_block_usage_tracker.cpp
